Multiple props support

--- a/test.css
+++ b/test.css
@@ -3,3 +3,5 @@
 .["sizeLarge"].sizeLarge {display: none}
               
 .["buttons"].buttons {background-color: azure}
+
+.["emojiContainer","emojiContainerClickable"].emojiContainer { color: #000; }
