Add index system to conversion
For situations where there are multiple matches but it's impossible to narrow the search

--- a/test.css
+++ b/test.css
@@ -8,3 +8,5 @@
 .["emojiContainer","emojiContainerClickable"].emojiContainer { color: #000; }
 
 .["emojiContainer","!footer", "!emojiContainerClickable"].emojiContainer { color: #000; }
+
+.["scrollerBase"][0].scrollerBase 
